Code adapted for Java 8